# GPTase

./: .env.example  .gitignore  .pre-commit-config.yaml  .style.yapf  CLAUDE.md  CLEANUP_SUMMARY.md  MCP_GUIDE.md  README.md  REFACTORING_COMPLETE.md  START_FRONTEND.md  executor_demo.py  figma_make_ui_prompt.md  main.py  mcp.json  mypy.ini  pyproject.toml  requirements.txt  runtime-input-assembly-plan.md  setup.py  start.sh  ui设计文档.md
.claude/: README.md  settings.json
.claude/agents/: code-analyzer.md  document-structure-analyzer.md  enzyme-database-collector.md  enzyme-design-extractor.md  enzyme-design-planner.md  enzyme-design-reporter.md  enzyme-extraction-summary.md  enzyme-kinetics-extractor.md  (+13 more)
GPTase/: __init__.py
config/: llm_config.deepseek.json  llm_config.gemini.json  llm_config.glm5.json  llm_config.minimax.json  llm_config.qwen.example.json  llm_config.qwen_vl.example.json  llm_config.template.json
data/: image_analysis_results.json  listov2025.md  zhang2022.md
design/: transition_state_workflow.md
docs/: CODE_STYLE.md  DEVELOPMENT_GUIDE.md  DOCS_REVIEW_LOG.md  DOCUMENT_STRUCTURE_ANALYZER_FLOWCHART.md  ENZYME_EXTRACTION_WORKFLOW.md  MCP_GUIDE.md  PRE_COMMIT_SETUP.md  README.md  REORGANIZATION_SUMMARY.md  START_FRONTEND.md  TECHNICAL_FEATURES.md  THINKING_MODE.md  VISION_IMAGE_ANALYZER_GUIDE.md  agent_framework_comparison.md  architecture.md  environment_setup.md  enzyme_design.md  feat-web-changes.md  remote_mcp_guide.md  setup.md  skills-lock.json  testing.md  tracking_mixin_usage.md  webui_redesign_lab_theme.md
examples/: README.md  base_class_demo.py  basic_usage.py  chat_demo.py  claude_agent_sdk_demo.py  design_extractor.py  design_workflow_extractor.py  ec_number_lookup_demo.py  enzyme_design_planner_demo.py  enzyme_summary_demo.py  file-explorer.md  frontend_usage.py  gemini_demo.py  generate_summary.py  gptase_agent_demo.py  gptase_file_explorer_demo.py  model_usage.py  planner_demo.py  pubchem_lookup_demo.py  reaction_extractor.py  reaction_extractor_demo.py  rhea_lookup_demo.py  rhea_mechanism_demo.py  test_mineru_tool.py  test_semanticscholar.py  vision_image_analyzer.py  vision_image_analyzer_react.py
gptase/: __init__.py  main.py  utils.py
papers/: SI_DOWNLOAD_STATUS.md  papers_doi.csv
pipelines/: README.md  __init__.py  add_ec_numbers.py  add_mutation_details.py  add_variant_info.py  combine_datasets.py  extract_pdb_info.py  json_to_csv.py  run_analysis.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: batch_run_kemp_extraction.py  compare_models.py  list_hetatm.py  migrate_to_document_output.py  organize_data.py  run_content_tagger.py  run_kinetics_extraction.py  self_healing_docs.py  setup_hooks.sh  start_dev.sh  start_mcp.sh  start_prod.sh
src/: __init__.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_agent_memory.py  test_agent_multimodal.py  test_csv_handling.py  test_enzyme_agent.py  test_enzyme_api.py  test_enzyme_extractor.py  test_evals.py  test_executors.py  test_executors_refactored.py  test_failure_handler.py  test_kemp_batch.py  test_main_cli_dispatch.py  test_main_memory_cli.py  test_mcp_config.py  test_models.py  test_mutation_extraction.py  test_orchestrator.py  test_pdb_data_structure.py  test_pdb_ec_conversion.py  test_pdb_novelty.py  test_plan_failure_handler.py  test_planner.py  test_provider_config.py  test_session_split.py  test_sop.py  test_storage_reset.py  test_streaming_logic.py  test_thinking_config.py  test_web_server.py
tests_legacy/: __init__.py  test_agent_local_tools.py  test_agent_memory.py  test_agent_multimodal.py  test_deterministic_delegate.py  test_main_cli_dispatch.py  test_mcp_config.py  test_models.py  test_plan_prompt.py  test_thinking_config.py  test_web_server.py
ui/: README.md  build.sh  dev.sh  index.html  package-lock.json  package.json  vite.config.ts
(+832 files in other folders)
