[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptase"
version = "1.0.0"
description = "A comprehensive multi-agent framework for AI task automation"
readme = "README.md"
authors = [
    {name = "GPTase Team", email = "team@gptase.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.2",
    "websockets>=11.0.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.8.0",
]
models = [
    "openai>=1.0.0",
    "anthropic>=0.28.0",
]

[project.scripts]
gptase = "gptase.main:main"
gptase-web = "gptase.web.app:create_app"

[project.urls]
Homepage = "https://github.com/gptase/gptase"
Documentation = "https://gptase.readthedocs.io"
Repository = "https://github.com/gptase/gptase"
Issues = "https://github.com/gptase/gptase/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
multi_line_output = 3