[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gptase"
version = "1.0.0"
description = "A comprehensive multi-agent framework for AI task automation"
readme = "README.md"
authors = [
    {name = "GPTase Team", email = "team@gptase.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0",
    "claude-agent-sdk>=0.1.0",
    "aiosqlite>=0.19.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
    "anthropic>=0.28.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "yapf>=0.40.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
gptase = "gptase.main:main"

[project.urls]
Homepage = "https://github.com/gptase/gptase"
Documentation = "https://gptase.readthedocs.io"
Repository = "https://github.com/gptase/gptase"
Issues = "https://github.com/gptase/gptase/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gptase*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_api_key: marks tests that require configured API credentials",
]

[tool.yapf]
based_on_style = "pep8"
column_limit = 88
indent_width = 4
split_before_logical_operator = true
split_before_arithmetic_operator = true

[tool.isort]
profile = "google"
multi_line_output = 3
line_length = 88
